2007-05-07  Shawn Betts  <sabetts@shitbender.gagrod>

	* input.lisp (*input-map*): bind ESC to input-abort

2007-05-06  Shawn Betts  <sabetts@shitbender.gagrod>

	* user.lisp ("gnew"): check if group exists
	("gnewbg"): likewise

	* input.lisp (input-find-completions): make sure the symbol is fboundp

	* core.lisp (find-group): new function

2007-05-05  Shawn Betts  <sabetts@shitbender.gagrod>

	* primitives.lisp (*focus-color*): set to gray

	* user.lisp ("loadrc"): wrap in with-restarts-menu
	("lastmsg"): handle case when there is no last message.
	("gmerge"): new command
	(*root-map*): switch around window navigating bindings to be the same as ratpoison

	* stumpwm.lisp (load-rc-file): take new argument, catch-errors.
	(stumpwm): print *startup-message* when non-nil on start up.

	* primitives.lisp (*window-format*): crop title at 50 chars
	(*startup-message*): new defvar

2007-05-04  Shawn Betts  <sabetts@shitbender.gagrod>

	* primitives.lisp (format-expand): allow a numeric "prefix" that
	crops the argument's string length.

2007-05-04  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (add-window): call screen-add-mapped-window
	(restore-window): likewise
	(withdraw-window): call screen-remove-mapped-window
	(netwm-update-client-list): new function
	(screen-add-mapped-window): likewise
	(screen-remove-mapped-window): likewise
	(net-set-properties): set the _NET_CLIENT_LIST property

2007-05-03  Shawn Betts  <sabetts@vcn.bc.ca>

	* make-image.lisp: return error code 0 for sbcl
	set SBCL_HOME for sbcl.

	* Makefile: new file

	* user.lisp ("reload"): don't call asdf if it's not loaded.

	* primitives.lisp (*new-frame-action*): new global

	* core.lisp (choose-new-frame-window): new function
	(split-frame): call choose-new-frame-window. show the new frame's
	window.

2007-04-27  Shawn Betts  <sabetts@vcn.bc.ca>

	* primitives.lisp (+netwm-supported+): new constant
	(+netwm-window-types+): likewise
	(+wm-take-focus+): remove constant
	(+wm-state+): likewise